Porfolio Section V1 done.

--- a/index.html
+++ b/index.html
@@ -283,6 +283,140 @@
                 </div>
             </div>
         </section>
+
+        <section class="testimonial_section" id="section--5">
+
+            <div class="testimonial_section_text_area">
+                <p class="testimonial_section_sub_title">
+                    Testimonials
+                </p>
+                <h1 class="testimonial_section_title">
+                    Hear from our clients
+                </h1>
+            </div>
+
+            <div class="testimonial_cards_area">
+
+                <div class="testimonial_card">
+                    <div class="testimonial_profile">
+                        <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
+                        <div class="testimonial_info">
+                            <h1 class="testimonial_name">
+                                Dolen Ch. Deori
+                            </h1>
+                            <p class="testimonial_title">
+                                Client
+                            </p>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="testimonial_review_area">
+                        <h1 class="testimonial_review_title">
+                            Best service in Assam
+                        </h1>
+                        <p class="testimonial_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibus optio!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea facilis sint molestiae porro dolor optio commodi laborum repudiandae nesciunt.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="testimonial_card">
+                    <div class="testimonial_profile">
+                        <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
+                        <div class="testimonial_info">
+                            <h1 class="testimonial_name">
+                                Riki Sonowal
+                            </h1>
+                            <p class="testimonial_title">
+                                Client
+                            </p>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="testimonial_review_area">
+                        <h1 class="testimonial_review_title">
+                            Love the pics
+                        </h1>
+                        <p class="testimonial_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="testimonial_card">
+                    <div class="testimonial_profile">
+                        <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
+                        <div class="testimonial_info">
+                            <h1 class="testimonial_name">
+                                Rahul Gogoi
+                            </h1>
+                            <p class="testimonial_title">
+                                Client
+                            </p>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="testimonial_review_area">
+                        <h1 class="testimonial_review_title">
+                            Best service in Assam
+                        </h1>
+                        <p class="testimonial_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibu.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="testimonial_card">
+                    <div class="testimonial_profile">
+                        <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
+                        <div class="testimonial_info">
+                            <h1 class="testimonial_name">
+                                Priyanka Bhattarai
+                            </h1>
+                            <p class="testimonial_title">
+                                Client
+                            </p>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="testimonial_review_area">
+                        <h1 class="testimonial_review_title">
+                            Best service in Assam
+                        </h1>
+                        <p class="testimonial_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibus optio!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea facilis sint molestiae porro dolor optio commodi laborum repudiandae nesciunt.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="testimonial_card">
+                    <div class="testimonial_profile">
+                        <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
+                        <div class="testimonial_info">
+                            <h1 class="testimonial_name">
+                                Ram Deka
+                            </h1>
+                            <p class="testimonial_title">
+                                Client
+                            </p>
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="testimonial_review_area">
+                        <h1 class="testimonial_review_title">
+                            Best service in Assam
+                        </h1>
+                        <p class="testimonial_review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibus optio!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea facilis sint molestiae porro dolor optio commodi laborum repudiandae nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde natus totam accusamus sunt, nam adipisci, blanditiis esse laudantium rerum facere libero quibusdam atque voluptatum. Minus minima ea itaque voluptatibus accusantium?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </div>
     <footer class="footer_area">
