--- a/index.html
+++ b/index.html
@@ -419,54 +419,18 @@
 
     </main>
 </div>
-    <footer class="footer_area">
-      <div class="copyright_text">
-        <p>&copy; All right Reserved by Through Rana’s Lens</p>
-      </div>
-      <div class="social_container">
-        <a href="" class="social_icon" aria-label="visit our twitter page">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="16"
-            width="16"
-            fill="currentColor"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
-            />
-          </svg>
-        </a>
-        <a href="" class="social_icon" aria-label="visit our facebook page">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-facebook"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
-            />
-          </svg>
-        </a>
-        <a href="" class="social_icon" aria-label="visit our instagram page">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-instagram"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M8 0L4.703.048C3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7L0 8.001l.048 3.297c.04.852.174 1.433.372 1.942a3.93 3.93 0 0 0 .923 1.417c.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372L8 16l3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923 3.93 3.93 0 0 0 .923-1.417c.197-.509.332-1.09.372-1.942L16 8l-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372L7.998 0h.003zm-.717 1.442h.718l3.232.046c.78.035 1.204.166 1.486.275a2.48 2.48 0 0 1 .92.599 2.47 2.47 0 0 1 .598.92c.11.281.24.705.275 1.485l.047 3.231-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919 2.47 2.47 0 0 1-.92.598c-.28.11-.704.24-1.485.276l-3.232.047c-2.136 0-2.39-.009-3.233-.047-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485l-.046-3.233.046-3.231c.036-.78.166-1.204.276-1.486a2.48 2.48 0 0 1 .599-.92 2.47 2.47 0 0 1 .92-.598c.282-.11.705-.24 1.485-.276l2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"
-            />
-          </svg>
-        </a>
-      </div>
-    </footer>
+
+<footer class="footer_area">
+    <div class="copyright_text">
+    <p>&copy; All right Reserved by Through Rana’s Lens</p>
+    </div>
+    <div class="social_container">
+        <a href="#" class="footer_social_link"><i class="ri-facebook-circle-fill social_icons"></i></a>
+        <a href="#" class="footer_social_link"><i class="ri-instagram-line social_icons"></i></a>
+        <a href="#" class="footer_social_link"><i class="ri-twitter-x-fill social_icons"></i></a>
+    </div>
+</footer>
+
 </body>
 <!-- NAVIGATION JS FILE -->
 <script src="./js/nav.js" defer></script>
