Instagram section v1 done, plus done some global updates.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,500&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 
 
@@ -77,9 +75,9 @@
                 <img class="founder_image" src="./assests/images/founder_img.webp" alt="">
             </div>
             <div class="about_section_info_area">
-                <h3 class="about_section_sub_heading">
+                <p class="about_section_sub_heading sub_title">
                     About Me
-                </h3>
+                </p>
                 <h1 class="about_section_title">
                     I'm Rana Medhi founder of Through Rana's Lens.
                 </h1>
@@ -118,7 +116,7 @@
 
         <section class="services_section" id="section--3">
             <div class="service_section_info">
-                <p class="service_section_sub_title">
+                <p class="service_section_sub_title sub_title">
                     Our Services
                 </p>
                 <h1 class="service_section_title">
@@ -239,7 +237,7 @@
 
         <section class="portfolio_section section" id="section--4">
             <div class="portfolio_text_container">
-                <p class="portfolio_section_sub_title">
+                <p class="portfolio_section_sub_title sub_title">
                 Portfolio
                 </p>
                 <div class="portfolio_info_area">
@@ -285,9 +283,8 @@
         </section>
 
         <section class="testimonial_section" id="section--5">
-
             <div class="testimonial_section_text_area">
-                <p class="testimonial_section_sub_title">
+                <p class="testimonial_section_sub_title sub_title">
                     Testimonials
                 </p>
                 <h1 class="testimonial_section_title">
@@ -415,6 +412,139 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="insta_section section" id="section--6">
+                <div class="insta_section_text_area">
+                    <p class="insta_section_sub_title sub_title">
+                        Instagram
+                    </p>
+                    <h1 class="insta_section_title">
+                        Follow me on Instagram
+                    </h1>
+                </div>
+
+                <div class="insta_cards_area">
+                    <a href="#" class="insta_card">
+                        <div class="insta_profile_info_area">
+                            <img class="insta_profile_pic" src="./assests/images/founder_img.webp" alt=""></img>
+                            <div class="insta_profile_info">
+                                <h1 class="insta_username">
+                                    rana_photograph
+                                </h1>
+                                <p class="insta_post_date">
+                                    July 2023
+                                </p>
+                            </div>
+                        </div>
+                        <div class="insta_img_area">
+                            <img class="insta_img" src="./assests/images/Hero_image.webp" alt="">
+                            <p class="insta_btn_link_text">
+                                Visit now <i class="ri-arrow-right-up-line"></i>
+                            </p>
+                        </div>
+                        <div class="insta_like_comment_area">
+                            <div class="likes_area interaction_count">
+                                <i class="ri-heart-3-line interaction_icon"></i>
+                                <p class="like_count count_text">20.5k</p>
+                            </div>
+                            <div class="comment_area interaction_count">
+                                <i class="ri-chat-3-line interaction_icon"></i>
+                                <p class="comment_count count_text">500</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="insta_card">
+                        <div class="insta_profile_info_area">
+                            <img class="insta_profile_pic" src="./assests/images/founder_img.webp" alt=""></img>
+                            <div class="insta_profile_info">
+                                <h1 class="insta_username">
+                                    rana_photograph
+                                </h1>
+                                <p class="insta_post_date">
+                                    July 2023
+                                </p>
+                            </div>
+                        </div>
+                        <div class="insta_img_area">
+                            <img class="insta_img" src="./assests/images/concert1.webp" alt="">
+                            <p class="insta_btn_link_text">
+                                Visit now <i class="ri-arrow-right-up-line"></i>
+                            </p>
+                        </div>
+                        <div class="insta_like_comment_area">
+                            <div class="likes_area interaction_count">
+                                <i class="ri-heart-3-line interaction_icon"></i>
+                                <p class="like_count count_text">125.5k</p>
+                            </div>
+                            <div class="comment_area interaction_count">
+                                <i class="ri-chat-3-line interaction_icon"></i>
+                                <p class="comment_count count_text">3k</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="insta_card">
+                        <div class="insta_profile_info_area">
+                            <img class="insta_profile_pic" src="./assests/images/founder_img.webp" alt=""></img>
+                            <div class="insta_profile_info">
+                                <h1 class="insta_username">
+                                    rana_photograph
+                                </h1>
+                                <p class="insta_post_date">
+                                    April 2024
+                                </p>
+                            </div>
+                        </div>
+                        <div class="insta_img_area">
+                            <img class="insta_img" src="./assests/images/product1.webp" alt="">
+                            <p class="insta_btn_link_text">
+                                Visit now <i class="ri-arrow-right-up-line"></i>
+                            </p>
+                        </div>
+                        <div class="insta_like_comment_area">
+                            <div class="likes_area interaction_count">
+                                <i class="ri-heart-3-line interaction_icon"></i>
+                                <p class="like_count count_text">35.5k</p>
+                            </div>
+                            <div class="comment_area interaction_count">
+                                <i class="ri-chat-3-line interaction_icon"></i>
+                                <p class="comment_count count_text">1.2k</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="insta_card">
+                        <div class="insta_profile_info_area">
+                            <img class="insta_profile_pic" src="./assests/images/founder_img.webp" alt=""></img>
+                            <div class="insta_profile_info">
+                                <h1 class="insta_username">
+                                    rana_photograph
+                                </h1>
+                                <p class="insta_post_date">
+                                    December 2023
+                                </p>
+                            </div>
+                        </div>
+                        <div class="insta_img_area">
+                            <img class="insta_img" src="./assests/images/wedding1.webp" alt="">
+                            <p class="insta_btn_link_text">
+                                Visit now <i class="ri-arrow-right-up-line"></i>
+                            </p>
+                        </div>
+                        <div class="insta_like_comment_area">
+                            <div class="likes_area interaction_count">
+                                <i class="ri-heart-3-line interaction_icon"></i>
+                                <p class="like_count count_text">20.5k</p>
+                            </div>
+                            <div class="comment_area interaction_count">
+                                <i class="ri-chat-3-line interaction_icon"></i>
+                                <p class="comment_count count_text">200</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
         </section>
 
     </main>
