Contact section v1 done.

--- a/index.html
+++ b/index.html
@@ -414,7 +414,41 @@
             </div>
         </section>
 
-        <section class="insta_section section" id="section--6">
+        <section class="contact_section" id="section-6">
+            <div class="contact_section_area">
+                <div class="contact_section_info">
+                    <div class="contact_info_text">
+                        <h1 class="contact_section_title">
+                            Lets Connect
+                        </h1>
+                        <p class="contact_section_desc">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit eius consequatur tempore magnam ex <br> laboriosam molestiae nemo voluptates nesciunt voluptas!
+                        </p>
+                        <div class="contact_info_area">
+                            <a href="#" class="contact_info_gmail contact">
+                                <i class="ri-mail-line contact_icon"></i>
+                                rana.medhi@gmail.com
+                            </a>
+                            <a href="#" class="contact_info_phone contact">
+                                <i class="ri-phone-line contact_icon"></i>
+                                +91 9395545956
+                            </a>
+                        </div>
+                        <div class="contact_cta_btn btn">
+                            <a class="contact_btn" href="#">
+                                Book Appointment
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact_section_img_area">
+                    <img src="./assests/images/travel2.webp" alt="" class="contact_section_img">
+                    <div class="img_overlay"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="insta_section section" id="section--7">
                 <div class="insta_section_text_area">
                     <p class="insta_section_sub_title sub_title">
                         Instagram
