--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,500&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -69,8 +70,8 @@
 
     <!-- MAIN BODY AREA -->
     <main class="main">
-        <!-- service showcase -->
-        <section class="about_section section" id="section--1">
+
+        <section class="area about_section section" id="section--1">
             <div class="about_section_image_area">
                 <img class="founder_image" src="./assests/images/founder_img.webp" alt="">
             </div>
@@ -81,7 +82,6 @@
                 <h1 class="about_section_title">
                     I'm Rana Medhi founder of Through Rana's Lens.
                 </h1>
-                <!-- <h1 class="about_section_name">Rana Medhi</h1> -->
                 <p class="about_section_desc">
                     I founded Through Rana's Lens back in 2017 when he was in school in order to a provide premium photography service to artists, models and couples throughout the biggest milestone in their life.<br> The high quality imagery is paired with a warm and friendly environment that is guaranteed to the best out of each person in front of the camera.Together Through Rana's Lens crew offer a top of the range all-rounded service for every clients who walks through the door.
                 </p>
@@ -91,30 +91,30 @@
             </div>
         </section>
 
-        <section class="counter_section section" id="section--2">
+        <section class="area counter_section section" id="section--2">
             <div class="counter">
-                <h1 class="count_text">10+</h1>
+                <h1 class="counter_text">10+</h1>
                 <div class="line"></div>
                 <p class="count_sub_text">Years of experience</p>
             </div>
             <div class="counter">
-                <h1 class="count_text">10K+</h1>
+                <h1 class="counter_text">10K+</h1>
                 <div class="line"></div>
                 <p class="count_sub_text">Project Completed</p>
             </div>
             <div class="counter">
-                <h1 class="count_text">80K+</h1>
+                <h1 class="counter_text">80K+</h1>
                 <div class="line"></div>
                 <p class="count_sub_text">World Wide Clients</p>
             </div>
             <div class="counter">
-                <h1 class="count_text">600+</h1>
+                <h1 class="counter_text" data-number="600">600+</h1>
                 <div class="line"></div>
                 <p class="count_sub_text">Positive Review</p>
             </div>
         </section>
 
-        <section class="services_section" id="section--3">
+        <section class="area services_section" id="section--3">
             <div class="service_section_info">
                 <p class="service_section_sub_title sub_title">
                     Our Services
@@ -235,10 +235,10 @@
             </div>
         </section>
 
-        <section class="portfolio_section section" id="section--4">
+        <section class="area portfolio_section section" id="section--4">
             <div class="portfolio_text_container">
                 <p class="portfolio_section_sub_title sub_title">
-                Portfolio
+                    Portfolio
                 </p>
                 <div class="portfolio_info_area">
                     <div class="portfolio_info_area_left">
@@ -282,7 +282,7 @@
             </div>
         </section>
 
-        <section class="testimonial_section" id="section--5">
+        <section class="area testimonial_section" id="section--5">
             <div class="testimonial_section_text_area">
                 <p class="testimonial_section_sub_title sub_title">
                     Testimonials
@@ -448,7 +448,7 @@
             </div>
         </section>
 
-        <section class="insta_section section" id="section--7">
+        <section class="area insta_section section" id="section--7">
                 <div class="insta_section_text_area">
                     <p class="insta_section_sub_title sub_title">
                         Instagram
@@ -596,6 +596,8 @@
 </footer>
 
 </body>
+
 <!-- NAVIGATION JS FILE -->
 <script src="./js/nav.js" defer></script>
+<script src="./js/index.js"></script>
 </html>
