About page hero section v2 update done

--- a/about.html
+++ b/about.html
@@ -92,25 +92,27 @@
           </div>
           <div class="hero_info_area">
             <p class="hero_subtitle sub_title">Know Me</p>
-            <h1 class="hero_title">
-              Life is all about beautiful moments, <br />Make every moment
-              perfect and memorable
-            </h1>
-            <p class="hero_section_bio">
-              Through Rana's Lens photography and video production company
-              specialize in fashion, weddings , concerts & portraits. Our aim is
-              to partner with clients throughout the most meaningful stages of
-              their life and to capture theses moments for reflection for years
-              to come. <br />
-              Rana Medhi founded Through Rana's Lens back in 2017 when he was in
-              school in order to a provide premium photography service to
-              artists, models and couples throughout the biggest milestone in
-              their life. The high quality imagery is paired with a warm and
-              friendly environment that is guaranteed to the best out of each
-              person in front of the camera.Together Through Rana's Lens crew
-              offer a top of the range all-rounded service for every clients who
-              walks through the door.
-            </p>
+            <div class="hero_about_area grid_col_span_2">
+              <h1 class="hero_title">
+                Life is all about beautiful moments, Making every moment perfect
+                and memorable
+              </h1>
+              <p class="hero_section_bio">
+                Through Rana's Lens photography and video production company
+                specialize in fashion, weddings , concerts & portraits. Our aim
+                is to partner with clients throughout the most meaningful stages
+                of their life and to capture theses moments for reflection for
+                years to come. <br />
+                Rana Medhi founded Through Rana's Lens back in 2017 when he was
+                in school in order to a provide premium photography service to
+                artists, models and couples throughout the biggest milestone in
+                their life. The high quality imagery is paired with a warm and
+                friendly environment that is guaranteed to the best out of each
+                person in front of the camera.Together Through Rana's Lens crew
+                offer a top of the range all-rounded service for every clients
+                who walks through the door.
+              </p>
+            </div>
           </div>
         </div>
       </header>
