about section done

--- a/about.html
+++ b/about.html
@@ -94,8 +94,8 @@
             <p class="hero_subtitle sub_title">Know Me</p>
             <div class="hero_about_area grid_col_span_2">
               <h1 class="hero_title">
-                Life is all about beautiful moments, Making every moment perfect
-                and memorable
+                Life is all about beautiful memories, Making every moment perfect
+                and memorable.
               </h1>
               <p class="hero_section_bio">
                 Through Rana's Lens photography and video production company
