about page added section animation

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
       </header>
 
       <main class="main">
-        <section class="insta_section section" id="section--1">
+        <section class="area insta_section section" id="section--1">
                     <div class="insta_section_text_area">
                         <p class="insta_section_sub_title sub_title">
                             Instagram
@@ -271,4 +271,5 @@
     </footer>
   </body>
   <script src="./js/nav.js" defer></script>
+  <script src="./js/index.js"></script>
 </html>
