added section animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
 
       <!-- MAIN BODY AREA  -->
       <main class="main">
-        <section class="section portfolio_section">
+        <section class="area section portfolio_section">
           <p class="portfolio_section_sub_title sub_title">Portfolio</p>
           <h1 class="portfolio_section_title">Our Image Gallery</h1>
 
@@ -213,5 +213,6 @@
     <!-- JS FILES -->
     <script src="./js/nav.js"></script>
     <script src="./js/portfolio.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
