contact page v2 done

--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,33 @@
         <section class="contact_section section" id="section--1">
           <div class="contact_section_left">
             <p class="sub_title contact_section_sub_title">Contact Us</p>
+            <div class="contact_information">
+              <div class="contact_email_info contact_info_box">
+                <p class="email_id contact_title">My email</p>
+                <a href="#" class="contact_info">medhirana9@gmail.com</a>
+              </div>
+              <div class="contact_phone_info contact_info_box">
+                <p class="email_id contact_title">Contact No.</p>
+                <a href="#" class="contact_info">+91 6003118499</a>
+              </div>
+              <div class="contact_social_info contact_info_box">
+                <p class="social_media_title contact_title">Social Media</p>
+                <div class="contact_section_social_icons">
+                  <a href="#"
+                    ><i class="ri-instagram-line contact_icons"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="ri-facebook-circle-fill contact_icons"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="ri-twitter-x-fill contact_icons"></i
+                  ></a>
+                  <a href="#"
+                    ><i class="ri-pinterest-fill contact_icons"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="contact_section_right">
             <h1 class="contact_section_title">
