contact page section animation added

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
       </header>
 
       <main class="main">
-        <section class="contact_section section" id="section--1">
+        <section class="area contact_section section" id="section--1">
           <div class="contact_section_left">
             <p class="sub_title contact_section_sub_title">Contact Us</p>
             <div class="contact_information">
@@ -274,4 +274,5 @@
   <!-- JS FILES -->
   <script src="./js/nav.js" defer></script>
   <script src="./js/contact.js" defer></script>
+  <script src="./js/index.js"></script>
 </html>
