home page small link update

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <p class="about_section_desc">
                         I founded Through Rana's Lens back in 2017 when he was in school in order to a provide premium photography service to artists, models and couples throughout the biggest milestone in their life.<br> The high quality imagery is paired with a warm and friendly environment that is guaranteed to the best out of each person in front of the camera.Together Through Rana's Lens crew offer a top of the range all-rounded service for every clients who walks through the door.
                     </p>
-                    <a href="#" class="about_cta_btn btn">
+                    <a href="about.html" class="about_cta_btn btn">
                         Know More
                     </a>
                 </div>
