updated navigation links

--- a/about.html
+++ b/about.html
@@ -53,16 +53,16 @@
             <ul class="nav_links">
               <div class="link_area">
                 <li class="links">
-                  <a class="link" href="/index.html">Home</a>
+                  <a class="link" href="/ranas_lens_website//index.html">Home</a>
                 </li>
                 <li class="links">
-                  <a class="link" href="/portfolio.html">Portfolio</a>
+                  <a class="link" href="/ranas_lens_website//portfolio.html">Portfolio</a>
                 </li>
                 <li class="links">
-                  <a class="link active" href="/about.html">About</a>
+                  <a class="link active" href="/ranas_lens_website//about.html">About</a>
                 </li>
                 <li class="links">
-                  <a class="link" href="/contact.html">Contact</a>
+                  <a class="link" href="/ranas_lens_website//contact.html">Contact</a>
                 </li>
               </div>
               <div class="social_container_2" id="social_container_2">
