--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             <ul class="nav_links">
               <div class="link_area">
                 <li class="links">
-                  <a class="link active" href="/index.html">Home</a>
+                  <a class="link active" href="/ranas_lens_website/index.html">Home</a>
                 </li>
                 <li class="links">
-                  <a class="link" href="/portfolio.html">Portfolio</a>
+                  <a class="link" href="/ranas_lens_website/portfolio.html">Portfolio</a>
                 </li>
                 <li class="links">
-                  <a class="link" href="/about.html">About</a>
+                  <a class="link" href="/ranas_lens_website/about.html">About</a>
                 </li>
                 <li class="links">
-                  <a class="link" href="/contact.html">Contact</a>
+                  <a class="link" href="/ranas_lens_website/contact.html">Contact</a>
                 </li>
               </div>
               <div class="social_container_2" id="social_container_2">
@@ -93,7 +93,7 @@
                     <p class="about_section_desc">
                         I founded Through Rana's Lens back in 2017 when he was in school in order to a provide premium photography service to artists, models and couples throughout the biggest milestone in their life.<br> The high quality imagery is paired with a warm and friendly environment that is guaranteed to the best out of each person in front of the camera.Together Through Rana's Lens crew offer a top of the range all-rounded service for every clients who walks through the door.
                     </p>
-                    <a href="about.html" class="about_cta_btn btn">
+                    <a href="/ranas_lens_website/about.html" class="about_cta_btn btn">
                         Know More
                     </a>
                 </div>
