--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,21 @@
                   <a class="link" href="/ranas_lens_website/index.html">Home</a>
                 </li>
                 <li class="links">
-                  <a class="link active" href="/ranas_lens_website//portfolio.html">Portfolio</a>
+                  <a
+                    class="link active"
+                    href="/ranas_lens_website/portfolio.html"
+                    >Portfolio</a
+                  >
                 </li>
                 <li class="links">
-                  <a class="link" href="/ranas_lens_website//about.html">About</a>
+                  <a class="link" href="/ranas_lens_website/about.html"
+                    >About</a
+                  >
                 </li>
                 <li class="links">
-                  <a class="link" href="/ranas_lens_website//contact.html">Contact</a>
+                  <a class="link" href="/ranas_lens_website/contact.html"
+                    >Contact</a
+                  >
                 </li>
               </div>
               <div class="social_container_2" id="social_container_2">
