Added loading animation

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,500&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
+    <!-- LOTTIE SCRIPT -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </head>
 
 <body>
+    <div class="loading_screen">
+          <lottie-player src="https://lottie.host/a538c93b-7912-4d1d-9c54-10e98d6df172/xD4VBErGal.json" background="#ffffff" speed="1" style="width: 300px; height: 300px" loop autoplay direction="1" mode="normal"></lottie-player>
+    </div>
     <div class="main_body">
         <header class="hero_container">
             <img src="./assests/images/Hero_image.webp" class="hero_image" alt="">
