updated contact information

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                 </div>
                 <div class="about_section_info_area">
                     <p class="about_section_sub_heading sub_title">
-                        About Me
+                        About Us
                     </p>
                     <h1 class="about_section_title">
                         I'm Rana Medhi founder of Through Rana's Lens.
                     </h1>
                     <p class="about_section_desc">
-                        I founded Through Rana's Lens back in 2017 when he was in school in order to a provide premium photography service to artists, models and couples throughout the biggest milestone in their life.<br> The high quality imagery is paired with a warm and friendly environment that is guaranteed to the best out of each person in front of the camera.Together Through Rana's Lens crew offer a top of the range all-rounded service for every clients who walks through the door.
+                        Rana Medhi founded Through Rana's Lens back in 2017 when he was in school in order to a provide premium photography service to artists, models and couples throughout the biggest milestone in their life.<br> The high quality imagery is paired with a warm and friendly environment that is guaranteed to the best out of each person in front of the camera.Together Through Rana's Lens crew offer a top of the range all-rounded service for every clients who walks through the door.
                     </p>
                     <a href="/ranas_lens_website/about.html" class="about_cta_btn btn">
                         Know More
@@ -439,13 +439,13 @@
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit eius consequatur tempore magnam ex <br> laboriosam molestiae nemo voluptates nesciunt voluptas!
                             </p>
                             <div class="contact_info_area">
-                                <a href="#" class="contact_info_gmail contact">
+                                <a href="mailto:medhirana9@gmail.com" class="contact_info_gmail contact">
                                     <i class="ri-mail-line contact_icon"></i>
-                                    rana.medhi@gmail.com
+                                    medhirana9@gmail.com
                                 </a>
                                 <a href="#" class="contact_info_phone contact">
                                     <i class="ri-phone-line contact_icon"></i>
-                                    +91 9395545956
+                                    +91 6003118499
                                 </a>
                             </div>
                             <div class="contact_cta_btn btn">
