Testimonail content update Insta section UI update

--- a/404.html
+++ b/404.html
@@ -26,6 +26,18 @@
 
   <body>
     <div class="main_body">
+      <div class="loading_screen">
+        <lottie-player
+          src="https://lottie.host/a538c93b-7912-4d1d-9c54-10e98d6df172/xD4VBErGal.json"
+          background="#ffffff"
+          speed="1"
+          style="width: 300px; height: 300px"
+          loop
+          autoplay
+          direction="1"
+          mode="normal"
+        ></lottie-player>
+      </div>
       <header class="hero_container">
         <!-- Navigation Area -->
         <div class="navigation_area">
@@ -56,13 +68,19 @@
                   <a class="link" href="/ranas_lens_website/index.html">Home</a>
                 </li>
                 <li class="links">
-                  <a class="link" href="/ranas_lens_website/portfolio.html">Portfolio</a>
+                  <a class="link" href="/ranas_lens_website/portfolio.html"
+                    >Portfolio</a
+                  >
                 </li>
                 <li class="links">
-                  <a class="link" href="/ranas_lens_website/about.html">About</a>
+                  <a class="link" href="/ranas_lens_website/about.html"
+                    >About</a
+                  >
                 </li>
                 <li class="links">
-                  <a class="link" href="/ranas_lens_website/contact.html">Contact</a>
+                  <a class="link" href="/ranas_lens_website/contact.html"
+                    >Contact</a
+                  >
                 </li>
               </div>
               <div class="social_container_2" id="social_container_2">
@@ -106,4 +124,5 @@
     </footer>
   </body>
   <script src="./js/nav.js" defer></script>
+  <script src="./js/index.js"></script>
 </html>
