--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
                             <div class="testimonial_info">
                                 <h1 class="testimonial_name">
-                                    Dolen Ch. Deori
+                                    Konistha Sarkar
                                 </h1>
                                 <p class="testimonial_title">
                                     Client
@@ -326,8 +326,8 @@
                                 Best service in Assam
                             </h1>
                             <p class="testimonial_review">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibus optio!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea facilis sint molestiae porro dolor optio commodi laborum repudiandae nesciunt.
+                                Working with the team was an absolute delight! 
+                                From capturing the vibrant energy of the event to highlighting the enthusiasm of participants, their work exceeded all expectations. The attention to detail and creativity showcased in every shot truly made the memories unforgettable. Thank you,  for beautifully encapsulating the essence of our Fest. We can't wait to relive the moments again and again through your amazing work!
                             </p>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                             <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
                             <div class="testimonial_info">
                                 <h1 class="testimonial_name">
-                                    Riki Sonowal
+                                    Vishal Nath
                                 </h1>
                                 <p class="testimonial_title">
                                     Client
@@ -350,7 +350,7 @@
                                 Love the pics
                             </h1>
                             <p class="testimonial_review">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque.
+                                We absolutely loved working with the aftermovie team! Their creativity, dedication, and professionalism truly shone through the entire event.Their creativity and professionalism make the entire process enjoyable. We can't wait for our next project together! 
                             </p>
                         </div>
                     </div>
@@ -360,10 +360,10 @@
                             <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
                             <div class="testimonial_info">
                                 <h1 class="testimonial_name">
-                                    Rahul Gogoi
+                                    Parizat Priyam 
                                 </h1>
                                 <p class="testimonial_title">
-                                    Client
+                                    Singer
                                 </p>
                             </div>
                         </div>
@@ -373,7 +373,7 @@
                                 Best service in Assam
                             </h1>
                             <p class="testimonial_review">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibu.
+                                It was great working with you Rana ..You really got my best angles. Thank you for making me feel so comfortable in front of the camera. It was such a great experience with you
                             </p>
                         </div>
                     </div>
@@ -383,10 +383,10 @@
                             <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
                             <div class="testimonial_info">
                                 <h1 class="testimonial_name">
-                                    Priyanka Bhattarai
+                                    Joyshree Chakraborty
                                 </h1>
                                 <p class="testimonial_title">
-                                    Client
+                                    Model
                                 </p>
                             </div>
                         </div>
@@ -396,8 +396,7 @@
                                 Best service in Assam
                             </h1>
                             <p class="testimonial_review">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibus optio!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea facilis sint molestiae porro dolor optio commodi laborum repudiandae nesciunt.
+                                I was just going through the pics you clicked and omg they are just mesmerizing😍 I wanted the pics to have a proper vintage feel and you made it possible. From the shots to the edits you did an outstanding job... Thank you soo much. Really loved working with you and looking forward to work again🌸
                             </p>
                         </div>
                     </div>
@@ -407,10 +406,10 @@
                             <img src="./assests/images/fashion1.webp" class="testimonial_img" alt="">
                             <div class="testimonial_info">
                                 <h1 class="testimonial_name">
-                                    Ram Deka
+                                    Manushree
                                 </h1>
                                 <p class="testimonial_title">
-                                    Client
+                                    Spokesperson, TUSSC 2023-24
                                 </p>
                             </div>
                         </div>
@@ -420,8 +419,7 @@
                                 Best service in Assam
                             </h1>
                             <p class="testimonial_review">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur odit in atque rem perspiciatis ducimus impedit amet quisquam? Impedit praesentium cum ut quod rem, error recusandae itaque architecto voluptatibus optio!
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea facilis sint molestiae porro dolor optio commodi laborum repudiandae nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde natus totam accusamus sunt, nam adipisci, blanditiis esse laudantium rerum facere libero quibusdam atque voluptatum. Minus minima ea itaque voluptatibus accusantium?
+                                It has been a pleasure collaborating with Through Rana's Lens &  Populate Pixels for our after movie. During the initial meeting itself, it was evident that the team is not only incredibly hard-working but also exceptionally well-organized. What truly impressed us was the level of preparedness they demonstrated, presenting us with a meticulously crafted script during our first encounter. This attention to detail and proactive approach set the tone for the entire collaboration, instilling confidence in their ability to execute our vision flawlessly. Their passion for their craft shines through in every aspect of their work. We are grateful for the opportunity to work with such a talented team and eagerly look forward to the exciting outcome.
                             </p>
                         </div>
                     </div>
@@ -468,7 +466,7 @@
                             Instagram
                         </p>
                         <h1 class="insta_section_title">
-                            Follow me on Instagram
+                            Follow us on Instagram
                         </h1>
                     </div>
     
