Testimonial Section UI Update

--- a/index.html
+++ b/index.html
@@ -323,10 +323,9 @@
                         <div class="line"></div>
                         <div class="testimonial_review_area">
                             <h1 class="testimonial_review_title">
-                                Best service in Assam
+                                Working with the team was an absolute delight!
                             </h1>
                             <p class="testimonial_review">
-                                Working with the team was an absolute delight! 
                                 From capturing the vibrant energy of the event to highlighting the enthusiasm of participants, their work exceeded all expectations. The attention to detail and creativity showcased in every shot truly made the memories unforgettable. Thank you,  for beautifully encapsulating the essence of our Fest. We can't wait to relive the moments again and again through your amazing work!
                             </p>
                         </div>
@@ -347,10 +346,10 @@
                         <div class="line"></div>
                         <div class="testimonial_review_area">
                             <h1 class="testimonial_review_title">
-                                Love the pics
+                               We absolutely loved working with the aftermovie team!
                             </h1>
                             <p class="testimonial_review">
-                                We absolutely loved working with the aftermovie team! Their creativity, dedication, and professionalism truly shone through the entire event.Their creativity and professionalism make the entire process enjoyable. We can't wait for our next project together! 
+                                Their creativity, dedication, and professionalism truly shone through the entire event.Their creativity and professionalism make the entire process enjoyable. We can't wait for our next project together! 
                             </p>
                         </div>
                     </div>
@@ -370,10 +369,10 @@
                         <div class="line"></div>
                         <div class="testimonial_review_area">
                             <h1 class="testimonial_review_title">
-                                Best service in Assam
+                               They really got my best angles
                             </h1>
                             <p class="testimonial_review">
-                                It was great working with you Rana ..You really got my best angles. Thank you for making me feel so comfortable in front of the camera. It was such a great experience with you
+                                It was great working with you Rana. You really got my best angles. Thank you for making me feel so comfortable in front of the camera. It was such a great experience with you
                             </p>
                         </div>
                     </div>
@@ -393,7 +392,7 @@
                         <div class="line"></div>
                         <div class="testimonial_review_area">
                             <h1 class="testimonial_review_title">
-                                Best service in Assam
+                                A Heartfelt Thank You to a Talented Photographer
                             </h1>
                             <p class="testimonial_review">
                                 I was just going through the pics you clicked and omg they are just mesmerizing😍 I wanted the pics to have a proper vintage feel and you made it possible. From the shots to the edits you did an outstanding job... Thank you soo much. Really loved working with you and looking forward to work again🌸
@@ -416,7 +415,7 @@
                         <div class="line"></div>
                         <div class="testimonial_review_area">
                             <h1 class="testimonial_review_title">
-                                Best service in Assam
+                                Through Rana's Lens & Populate Pixels Deliver Exceptional After Movie Experience
                             </h1>
                             <p class="testimonial_review">
                                 It has been a pleasure collaborating with Through Rana's Lens &  Populate Pixels for our after movie. During the initial meeting itself, it was evident that the team is not only incredibly hard-working but also exceptionally well-organized. What truly impressed us was the level of preparedness they demonstrated, presenting us with a meticulously crafted script during our first encounter. This attention to detail and proactive approach set the tone for the entire collaboration, instilling confidence in their ability to execute our vision flawlessly. Their passion for their craft shines through in every aspect of their work. We are grateful for the opportunity to work with such a talented team and eagerly look forward to the exciting outcome.
